[gd_scene load_steps=15 format=2]

[ext_resource path="res://Source/Levels/Level_06.gd" type="Script" id=1]
[ext_resource path="res://Source/InteractableItems/Potions/Potion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/InteractableItems/Chests/Chest_Show_Potion_Wrong.tscn" type="PackedScene" id=3]
[ext_resource path="res://Source/Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Source/InteractableItems/Chests/Chest_Show_Potion_Right.tscn" type="PackedScene" id=5]
[ext_resource path="res://Source/InteractableItems/Chests/Chest_Show_Potion_Wrong2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Source/InteractableItems/Pulley/Pulley.tscn" type="PackedScene" id=7]
[ext_resource path="res://Source/Levels/MedievalTileSet.tres" type="TileSet" id=8]
[ext_resource path="res://Sprites/Backgrounds/sala_while.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Objects/InteractableItems/Paintings/painting_blank_transparent.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Objects/InteractableItems/Chests/chest_closed.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Objects/InteractableItems/Paintings/painting_spin_transparent.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Objects/InteractableItems/Paintings/painting_stop_transparent.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Objects/InteractableItems/Scrolls/scroll3_transparent.png" type="Texture" id=14]



[node name="Level_06" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1100.44, 168 )
texture = ExtResource( 9 )
offset = Vector2( -428.444, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 48, 48 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( -327687, 118, 0, -327686, 118, 0, -327685, 118, 0, -327684, 118, 0, -327683, 116, 0, -327682, 118, 0, -327681, 118, 0, -393216, 118, 0, -393215, 118, 0, -393214, 118, 0, -393213, 118, 0, -393212, 118, 0, -393211, 118, 0, -393210, 118, 0, -393209, 118, 0, -393208, 118, 0, -393207, 118, 0, -393206, 118, 0, -393205, 118, 0, -393204, 118, 0, -393203, 118, 0, -393202, 118, 0, -393201, 118, 0, -393200, 118, 0, -393199, 118, 0, -393198, 118, 0, -393197, 118, 0, -393196, 118, 0, -393195, 118, 0, -393194, 118, 0, -393193, 118, 0, -393192, 118, 0, -393191, 118, 0, -393190, 118, 0, -393189, 118, 0, -393188, 116, 0, -393187, 116, 0, -393186, 116, 0, -393185, 116, 0, -393184, 116, 0, -393183, 116, 0, -393182, 116, 0, -393181, 116, 0, -393180, 116, 0, -393179, 118, 0, -262151, 118, 0, -262150, 118, 0, -262149, 118, 0, -262148, 116, 0, -262147, 116, 0, -262146, 118, 0, -262145, 118, 0, -327680, 118, 0, -327679, 118, 0, -327678, 118, 0, -327677, 118, 0, -327676, 118, 0, -327675, 118, 0, -327674, 118, 0, -327673, 116, 0, -327672, 116, 0, -327671, 116, 0, -327670, 116, 0, -327669, 116, 0, -327668, 116, 0, -327667, 116, 0, -327666, 116, 0, -327665, 116, 0, -327664, 116, 0, -327663, 116, 0, -327662, 116, 0, -327661, 116, 0, -327660, 116, 0, -327659, 116, 0, -327658, 116, 0, -327657, 116, 0, -327656, 116, 0, -327655, 116, 0, -327654, 116, 0, -327653, 116, 0, -327652, 116, 0, -327651, 118, 0, -327650, 118, 0, -327649, 118, 0, -327648, 118, 0, -327647, 118, 0, -327646, 118, 0, -327645, 118, 0, -327644, 116, 0, -327643, 118, 0, -196615, 118, 0, -196614, 118, 0, -196613, 116, 0, -196612, 116, 0, -196611, 118, 0, -196610, 118, 0, -196609, 118, 0, -262144, 118, 0, -262143, 118, 0, -262142, 118, 0, -262141, 118, 0, -262140, 118, 0, -262139, 118, 0, -262138, 118, 0, -262137, 118, 0, -262136, 118, 0, -262135, 118, 0, -262134, 118, 0, -262133, 118, 0, -262132, 118, 0, -262131, 118, 0, -262130, 118, 0, -262129, 118, 0, -262128, 118, 0, -262127, 118, 0, -262126, 118, 0, -262125, 118, 0, -262124, 118, 0, -262123, 118, 0, -262122, 118, 0, -262121, 118, 0, -262120, 118, 0, -262119, 118, 0, -262118, 118, 0, -262117, 118, 0, -262116, 118, 0, -262115, 118, 0, -262114, 118, 0, -262113, 118, 0, -262112, 118, 0, -262111, 118, 0, -262110, 118, 0, -262109, 118, 0, -262108, 116, 0, -262107, 118, 0, -131079, 118, 0, -131078, 116, 0, -131077, 116, 0, -131076, 118, 0, -131075, 118, 0, -131074, 118, 0, -131073, 118, 0, -196608, 118, 0, -196607, 118, 0, -196606, 118, 0, -196605, 97, 0, -196604, 97, 0, -196603, 97, 0, -196602, 97, 0, -196601, 97, 0, -196600, 118, 0, -196599, 118, 0, -196598, 118, 0, -196597, 118, 0, -196596, 118, 0, -196595, 118, 0, -196594, 118, 0, -196593, 118, 0, -196592, 118, 0, -196591, 118, 0, -196590, 96, 0, -196589, 96, 0, -196588, 96, 0, -196587, 96, 0, -196586, 96, 0, -196585, 96, 0, -196584, 96, 0, -196583, 118, 0, -196582, 118, 0, -196581, 118, 0, -196580, 118, 0, -196579, 118, 0, -196578, 118, 0, -196577, 118, 0, -196576, 118, 0, -196575, 118, 0, -196574, 96, 0, -196573, 116, 0, -196572, 116, 0, -196571, 118, 0, -65543, 118, 0, -65542, 116, 0, -65541, 118, 0, -65540, 118, 0, -65539, 96, 0, -65538, 96, 0, -65537, 96, 0, -131072, 96, 0, -131071, 97, 0, -131070, 97, 0, -131069, 97, 0, -131068, 96, 0, -131067, 96, 0, -131066, 96, 0, -131065, 97, 0, -131064, 97, 0, -131063, 96, 0, -131062, 96, 0, -131061, 96, 0, -131060, 96, 0, -131059, 96, 0, -131058, 118, 0, -131057, 118, 0, -131056, 118, 0, -131055, 118, 0, -131054, 118, 0, -131053, 118, 0, -131052, 118, 0, -131051, 118, 0, -131050, 118, 0, -131049, 118, 0, -131048, 96, 0, -131047, 96, 0, -131046, 118, 0, -131045, 118, 0, -131044, 118, 0, -131043, 118, 0, -131042, 118, 0, -131041, 118, 0, -131040, 118, 0, -131039, 118, 0, -131038, 118, 0, -131037, 116, 0, -131036, 118, 0, -131035, 118, 0, -7, 118, 0, -6, 116, 0, -5, 118, 0, -4, 96, 0, -3, 118, 0, -2, 118, 0, -1, 118, 0, -65536, 115, 0, -65535, 117, 0, -65534, 117, 0, -65533, 117, 0, -65532, 113, 0, -65531, 117, 0, -65530, 117, 0, -65529, 117, 0, -65528, 113, 0, -65527, 117, 0, -65526, 117, 0, -65525, 117, 0, -65524, 113, 0, -65523, 117, 0, -65522, 117, 0, -65521, 117, 0, -65520, 113, 0, -65519, 117, 0, -65518, 117, 0, -65517, 117, 0, -65516, 113, 0, -65515, 117, 0, -65514, 113, 0, -65513, 117, 0, -65512, 113, 0, -65511, 117, 0, -65510, 113, 0, -65509, 104, 0, -65508, 118, 0, -65507, 118, 0, -65506, 118, 0, -65505, 118, 0, -65504, 96, 0, -65503, 118, 0, -65502, 118, 0, -65501, 116, 0, -65500, 118, 0, -65499, 118, 0, 65529, 118, 0, 65530, 116, 0, 65531, 118, 0, 65532, 118, 0, 65533, 118, 0, 65534, 118, 0, 65535, 85, 0, 28, 88, 0, 29, 118, 0, 30, 96, 0, 31, 118, 0, 32, 118, 0, 33, 118, 0, 34, 118, 0, 35, 116, 0, 36, 118, 0, 37, 118, 0, 131065, 118, 0, 131066, 116, 0, 131067, 118, 0, 131068, 118, 0, 131069, 118, 0, 131070, 118, 0, 131071, 89, 0, 65564, 87, 0, 65565, 118, 0, 65566, 118, 0, 65567, 118, 0, 65568, 118, 0, 65569, 118, 0, 65570, 118, 0, 65571, 116, 0, 65572, 116, 0, 65573, 118, 0, 196601, 118, 0, 196602, 116, 0, 196603, 118, 0, 196604, 118, 0, 196605, 118, 0, 196606, 118, 0, 196607, 89, 0, 131100, 87, 0, 131101, 96, 0, 131102, 118, 0, 131103, 118, 0, 131104, 118, 0, 131105, 118, 0, 131106, 118, 0, 131107, 118, 0, 131108, 116, 0, 131109, 118, 0, 262137, 118, 0, 262138, 116, 0, 262139, 118, 0, 262140, 118, 0, 262141, 118, 0, 262142, 118, 0, 262143, 89, 0, 196636, 87, 0, 196637, 118, 0, 196638, 118, 0, 196639, 118, 0, 196640, 118, 0, 196641, 118, 0, 196642, 118, 0, 196643, 118, 0, 196644, 116, 0, 196645, 118, 0, 327673, 118, 0, 327674, 116, 0, 327675, 118, 0, 327676, 118, 0, 327677, 118, 0, 327678, 118, 0, 327679, 80, 0, 262172, 87, 0, 262173, 118, 0, 262174, 96, 0, 262175, 118, 0, 262176, 118, 0, 262177, 96, 0, 262178, 118, 0, 262179, 118, 0, 262180, 116, 0, 262181, 118, 0, 393209, 118, 0, 393210, 116, 0, 393211, 118, 0, 393212, 96, 0, 393213, 96, 0, 393214, 118, 0, 393215, 85, 0, 327680, 68, 0, 327681, 76, 0, 327682, 79, 0, 327683, 75, 0, 327690, 76, 0, 327691, 79, 0, 327692, 75, 0, 327708, 87, 0, 327709, 118, 0, 327710, 118, 0, 327711, 118, 0, 327712, 118, 0, 327713, 118, 0, 327714, 118, 0, 327715, 118, 0, 327716, 116, 0, 327717, 118, 0, 458745, 118, 0, 458746, 116, 0, 458747, 118, 0, 458748, 118, 0, 458749, 96, 0, 458750, 118, 0, 458751, 89, 0, 393216, 96, 0, 393217, 97, 0, 393218, 96, 0, 393219, 98, 0, 393226, 118, 0, 393227, 118, 0, 393228, 118, 0, 393244, 53, 0, 393245, 96, 0, 393246, 118, 0, 393247, 118, 0, 393248, 118, 0, 393249, 118, 0, 393250, 118, 0, 393251, 116, 0, 393252, 116, 0, 393253, 118, 0, 524281, 118, 0, 524282, 116, 0, 524283, 118, 0, 524284, 96, 0, 524285, 96, 0, 524286, 118, 0, 524287, 89, 0, 458752, 97, 0, 458753, 96, 0, 458754, 97, 0, 458755, 99, 0, 458756, 68, 0, 458757, 58, 0, 458758, 47, 0, 458759, 46, 0, 458760, 45, 0, 458761, 44, 0, 458762, 118, 0, 458763, 118, 0, 458764, 118, 0, 458765, 76, 0, 458766, 79, 0, 458767, 75, 0, 458768, 68, 0, 458769, 76, 0, 458770, 79, 0, 458771, 75, 0, 458772, 76, 0, 458773, 79, 0, 458774, 75, 0, 458775, 68, 0, 458776, 68, 0, 458777, 68, 0, 458778, 68, 0, 458779, 68, 0, 458780, 88, 0, 458781, 118, 0, 458782, 118, 0, 458783, 118, 0, 458784, 96, 0, 458785, 118, 0, 458786, 118, 0, 458787, 116, 0, 458788, 118, 0, 458789, 118, 0, 589817, 118, 0, 589818, 116, 0, 589819, 118, 0, 589820, 118, 0, 589821, 118, 0, 589822, 118, 0, 589823, 80, 0, 524288, 118, 0, 524289, 118, 0, 524290, 99, 0, 524291, 98, 0, 524292, 99, 0, 524293, 118, 0, 524294, 116, 0, 524295, 118, 0, 524296, 116, 0, 524297, 118, 0, 524298, 118, 0, 524299, 118, 0, 524300, 118, 0, 524301, 118, 0, 524302, 118, 0, 524303, 118, 0, 524304, 118, 0, 524305, 118, 0, 524306, 118, 0, 524307, 116, 0, 524308, 116, 0, 524309, 118, 0, 524310, 118, 0, 524311, 118, 0, 524312, 118, 0, 524313, 118, 0, 524314, 118, 0, 524315, 118, 0, 524316, 87, 0, 524317, 118, 0, 524318, 96, 0, 524319, 118, 0, 524320, 118, 0, 524321, 118, 0, 524322, 118, 0, 524323, 116, 0, 524324, 118, 0, 524325, 118, 0, 655353, 118, 0, 655354, 116, 0, 655355, 118, 0, 655356, 118, 0, 655357, 118, 0, 655358, 118, 0, 655359, 118, 0, 589824, 118, 0, 589825, 118, 0, 589826, 118, 0, 589827, 118, 0, 589828, 118, 0, 589829, 118, 0, 589830, 118, 0, 589831, 118, 0, 589832, 118, 0, 589833, 118, 0, 589834, 118, 0, 589835, 118, 0, 589836, 116, 0, 589837, 116, 0, 589838, 118, 0, 589839, 118, 0, 589840, 118, 0, 589841, 116, 0, 589842, 116, 0, 589843, 118, 0, 589844, 118, 0, 589845, 116, 0, 589846, 116, 0, 589847, 116, 0, 589848, 116, 0, 589849, 116, 0, 589850, 116, 0, 589851, 118, 0, 589852, 87, 0, 589853, 118, 0, 589854, 118, 0, 589855, 118, 0, 589856, 118, 0, 589857, 118, 0, 589858, 116, 0, 589859, 118, 0, 589860, 118, 0, 589861, 118, 0, 720889, 118, 0, 720890, 116, 0, 720891, 118, 0, 720892, 118, 0, 720893, 118, 0, 720894, 118, 0, 720895, 118, 0, 655360, 118, 0, 655361, 118, 0, 655362, 118, 0, 655363, 118, 0, 655364, 118, 0, 655365, 118, 0, 655366, 118, 0, 655367, 118, 0, 655368, 118, 0, 655369, 118, 0, 655370, 118, 0, 655371, 118, 0, 655372, 118, 0, 655373, 118, 0, 655374, 116, 0, 655375, 116, 0, 655376, 116, 0, 655377, 118, 0, 655378, 118, 0, 655379, 118, 0, 655380, 118, 0, 655381, 118, 0, 655382, 118, 0, 655383, 118, 0, 655384, 118, 0, 655385, 118, 0, 655386, 116, 0, 655387, 118, 0, 655388, 53, 0, 655389, 118, 0, 655390, 118, 0, 655391, 118, 0, 655392, 118, 0, 655393, 96, 0, 655394, 116, 0, 655395, 118, 0, 655396, 118, 0, 655397, 118, 0, 786425, 118, 0, 786426, 116, 0, 786427, 116, 0, 786428, 118, 0, 786429, 118, 0, 786430, 118, 0, 786431, 118, 0, 720896, 118, 0, 720897, 118, 0, 720898, 118, 0, 720899, 118, 0, 720900, 118, 0, 720901, 118, 0, 720902, 118, 0, 720903, 118, 0, 720904, 118, 0, 720905, 118, 0, 720906, 118, 0, 720907, 118, 0, 720908, 118, 0, 720909, 118, 0, 720910, 118, 0, 720911, 118, 0, 720912, 118, 0, 720913, 118, 0, 720914, 118, 0, 720915, 118, 0, 720916, 118, 0, 720917, 118, 0, 720918, 118, 0, 720919, 118, 0, 720920, 118, 0, 720921, 118, 0, 720922, 118, 0, 720923, 118, 0, 720924, 118, 0, 720925, 118, 0, 720926, 118, 0, 720927, 118, 0, 720928, 118, 0, 720929, 116, 0, 720930, 116, 0, 720931, 118, 0, 720932, 118, 0, 720933, 118, 0, 851961, 118, 0, 851962, 118, 0, 851963, 116, 0, 851964, 118, 0, 851965, 118, 0, 851966, 118, 0, 851967, 118, 0, 786432, 116, 0, 786433, 116, 0, 786434, 116, 0, 786435, 116, 0, 786436, 116, 0, 786437, 116, 0, 786438, 116, 0, 786439, 116, 0, 786440, 116, 0, 786441, 116, 0, 786442, 116, 0, 786443, 116, 0, 786444, 116, 0, 786445, 116, 0, 786446, 116, 0, 786447, 116, 0, 786448, 116, 0, 786449, 116, 0, 786450, 116, 0, 786451, 116, 0, 786452, 116, 0, 786453, 116, 0, 786454, 116, 0, 786455, 116, 0, 786456, 118, 0, 786457, 118, 0, 786458, 118, 0, 786459, 118, 0, 786460, 118, 0, 786461, 118, 0, 786462, 118, 0, 786463, 118, 0, 786464, 116, 0, 786465, 116, 0, 786466, 118, 0, 786467, 118, 0, 786468, 118, 0, 786469, 118, 0, 917497, 118, 0, 917498, 118, 0, 917499, 116, 0, 917500, 116, 0, 917501, 116, 0, 917502, 116, 0, 917503, 116, 0, 851968, 118, 0, 851969, 118, 0, 851970, 118, 0, 851971, 118, 0, 851972, 118, 0, 851973, 118, 0, 851974, 118, 0, 851975, 118, 0, 851976, 118, 0, 851977, 118, 0, 851978, 118, 0, 851979, 118, 0, 851980, 118, 0, 851981, 118, 0, 851982, 118, 0, 851983, 118, 0, 851984, 118, 0, 851985, 118, 0, 851986, 118, 0, 851987, 118, 0, 851988, 118, 0, 851989, 118, 0, 851990, 118, 0, 851991, 118, 0, 851992, 116, 0, 851993, 116, 0, 851994, 116, 0, 851995, 116, 0, 851996, 116, 0, 851997, 116, 0, 851998, 116, 0, 851999, 116, 0, 852000, 116, 0, 852001, 118, 0, 852002, 118, 0, 852003, 118, 0, 852004, 118, 0, 852005, 118, 0 )

[node name="Pulley" parent="." instance=ExtResource( 7 )]
position = Vector2( 692.112, 193.063 )
animation = "idle"

[node name="Potion" parent="." instance=ExtResource( 2 )]
position = Vector2( 332.964, 323.482 )

[node name="Chests" type="Node2D" parent="."]

[node name="Chest_Show_Potion_Right2" parent="Chests" instance=ExtResource( 3 )]
position = Vector2( 848.76, 315.961 )

[node name="chest_closed" type="Sprite" parent="Chests"]
light_mask = -2147483647
position = Vector2( 849.635, 328.957 )
texture = ExtResource( 11 )

[node name="Chest_Show_Potion_Right" parent="Chests" instance=ExtResource( 5 )]
position = Vector2( 914.99, 315.917 )

[node name="chest_closed2" type="Sprite" parent="Chests"]
position = Vector2( 916.003, 328.93 )
texture = ExtResource( 11 )

[node name="Chest_Show_Potion_Wrong2" parent="Chests" instance=ExtResource( 6 )]
position = Vector2( 987.054, 315.933 )

[node name="chest_closed3" type="Sprite" parent="Chests"]
position = Vector2( 988.067, 328.947 )
texture = ExtResource( 11 )

[node name="Paintings" type="Node2D" parent="."]

[node name="Painting_Stop" type="Sprite" parent="Paintings"]
position = Vector2( 1067.41, 233.642 )
texture = ExtResource( 13 )

[node name="Painting_Spin" type="Sprite" parent="Paintings"]
position = Vector2( 1067.41, 233.642 )
texture = ExtResource( 12 )

[node name="Painting" type="Sprite" parent="Paintings"]
position = Vector2( 1067.41, 233.642 )
texture = ExtResource( 10 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 70.5891, 214.584 )

[node name="Scroll" parent="Player" index="4"]
position = Vector2( -235.487, -103.394 )
texture = ExtResource( 14 )

[node name="Label" parent="Player/Scroll" index="0"]
margin_left = -62.8195
margin_top = -25.0467
margin_right = 64.1805
margin_bottom = 7.95332
text = "while chest != 1:
   print(\"Spin!\")"

[node name="Label2" parent="Player/Scroll" index="1"]
margin_left = -63.1165
margin_top = 8.73933
margin_right = 34.8835
margin_bottom = 39.7393
text = "print(\"Stop!)"

[node name="Label3" parent="Player/Scroll" index="2"]
margin_left = -100.982
margin_top = -34.2436
margin_right = -41.982
margin_bottom = -3.24355
text = "if 2 > 3:
   print(2)"

[node name="Label4" parent="Player/Scroll" index="3"]
margin_left = -102.087
margin_top = -3.10401
margin_right = 1.91263
margin_bottom = 27.896
text = "else:
   print(3)"

[node name="Label5" parent="Player/Scroll" index="4"]
margin_left = -101.328
margin_top = -5.46665
margin_right = -41.3284
margin_bottom = 25.5334
text = "if A > B:
   print(A)"

[node name="Label6" parent="Player/Scroll" index="5"]
margin_left = -101.747
margin_top = 27.5139
margin_right = 5.25301
margin_bottom = 58.5139
text = "else:
   print()"

[editable path="Player"]
